wiki docs release setup via actions.